<resources>

    <string name="app_name">颂车3.0</string>

    <!--main-->
    <string name="home">首页</string>
    <string name="sw_travel">颂车出行</string>
    <string name="scan_code">扫码</string>
    <string name="car_life">车生活</string>
    <string name="me">我的</string>
    <string name="exit_press_again">再按一次退出</string>

    <!--home-->
    <string name="songche_headline">颂车头条</string>
    <string name="quick_collection">快速催收</string>
    <string name="agent_management">经纪人管理</string>
    <string name="repayment_customer_management">还款客户管理</string>
    <string name="overdue_customer_management">逾期客户管理</string>
    <string name="more">更多</string>
    <string name="detail">详情</string>


    <string name="collection_record">催收记录(%s)</string>
    <string name="apply_collection">申请催收</string>

    <string name="all">全部</string>
    <string name="repayment">还款中</string>
    <string name="overdue">已逾期</string>
    <string name="closed">已结清</string>

    <string name="project_number">项目编号： %s</string>
    <string name="customer_name">客户姓名： %s</string>
    <string name="customer_phone">客户电话： %s</string>
    <string name="apply_product">申请产品： %s</string>
    <string name="loan_date">放款日期： %s</string>

    <string name="activated">已激活</string>
    <string name="pending_activate">待激活</string>

    <string name="add">添加</string>
    <string name="agent_management_add_tip">登录密码会发至该手机号，请谨慎填写</string>

    <string name="hint_add_agent_name">请输入经纪人姓名</string>
    <string name="hint_add_agent_phone">请输入经纪人电话</string>
    <string name="submit">提交</string>

    <string name="debt_result">催收结果(%s)</string>
    <string name="debt_order_num">催收单号： %s</string>
    <string name="debt_type">催收类型： %s</string>
    <string name="debt_order_time">派单时间： %s</string>

    <string name="completed">已完成</string>


    <string name="input_num_character">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>

</resources>
