<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_42"
    android:paddingRight="@dimen/margin_42"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agent_management"
        android:textSize="@dimen/font_size_18"
        android:textColor="@color/color_000000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_management_add_tip"
        android:layout_marginTop="@dimen/margin_10"
        android:textColor="@color/color_E7B24D"
        android:textSize="@dimen/font_size_14" />


    <EditText
        android:id="@+id/et_agent_name"
        style="@style/baseEditText"
        android:layout_marginTop="@dimen/margin_42"
        android:paddingTop="@dimen/margin_18"
        android:paddingBottom="@dimen/margin_18"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:hint="@string/hint_add_agent_name"/>
    <EditText
        android:id="@+id/et_agent_phone"
        style="@style/baseEditText"
        android:hint="@string/hint_add_agent_phone"/>

    <TextView
        style="@style/big_btn_black_stytle"
        android:id="@+id/tv_submit"
        android:gravity="center"
        android:text="@string/submit"/>

</LinearLayout>
